integration of line comparison